--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,20 @@
 {
-    "name": "simon/phpiggy",
-    "description": "A PHP app for tracking expenses.",
-    "authors": [
-        {
-            "name": "simonTomSt",
-            "email": "simontomst.github@gmail.com"
-        }
-    ],
-    "require": {},
-    "autoload": {
-        "psr-4": {
-            "Framework\\": "src/Framework",
-            "App\\": "src/App"
-        }
+  "name": "simon/phpiggy",
+  "description": "A PHP app for tracking expenses.",
+  "authors": [
+    {
+      "name": "simonTomSt",
+      "email": "simontomst.github@gmail.com"
     }
+  ],
+  "require": {},
+  "autoload": {
+    "psr-4": {
+      "Framework\\": "src/Framework",
+      "App\\": "src/App"
+    },
+    "files": [
+      "src/App/Config/routes.php"
+    ]
+  }
 }
